...
              <Loader2 className="w-4 h-4 mr-2 animate-spin" />
              Creating...
            </>
          ) : (
            <>
              <CheckCircle className="w-4 h-4 mr-2" />
              Create DVE
            </>
          )}
        </Button>
      </div>
    </form>
  );
...
